August_30/August_30/src/objects/Trailhead_User__c.object
<CustomObject>
    <fields>
        <fullName>Last_Update__c</fullName>
        <description>This field stores the date when the record was last synced with Trailhead.</description>
        <label>Last Update</label>
        <summarizedField>Daily_Stats__c.Date__c</summarizedField>
        <summaryForeignKey>Daily_Stats__c.Trailhead_User__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Profile_Picture_URL__c</fullName>
        <description>This field stores the url to the team member’s Trailhead profile picture.</description>
        <label>Profile Picture URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <formula>IF(Total_Badges__c &gt;= 100 &amp;&amp; Total_Points__c &gt;= 50000 , 'Ranger', 
IF(Total_Badges__c &gt;= 50 &amp;&amp; Total_Points__c &gt;= 35000 , 'Expeditioner', 
IF(Total_Badges__c &gt;= 25 &amp;&amp; Total_Points__c &gt;= 18000 , 'Mountaineer', 
IF(Total_Badges__c &gt;= 10 &amp;&amp; Total_Points__c &gt;= 9000 , 'Adventurer', 
IF(Total_Badges__c &gt;= 5 &amp;&amp; Total_Points__c &gt;= 3000 , 'Explorer', 
IF(Total_Badges__c &gt;= 1 &amp;&amp; Total_Points__c &gt;= 200 , 'Hiker', 'Scout'))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Badges__c</fullName>
        <description>This field stores the total badges the team member has.</description>
        <label>Total Badges</label>
        <summarizedField>Daily_Stats__c.Badges__c</summarizedField>
        <summaryForeignKey>Daily_Stats__c.Trailhead_User__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <description>This field stores the total points the team member has.</description>
        <label>Total Points</label>
        <summarizedField>Daily_Stats__c.Points__c</summarizedField>
        <summaryForeignKey>Daily_Stats__c.Trailhead_User__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Superbadges__c</fullName>
        <description>This field stores the total superbadges the team member has.</description>
        <label>Total Superbadges</label>
        <summarizedField>Daily_Stats__c.Superbadges__c</summarizedField>
        <summaryForeignKey>Daily_Stats__c.Trailhead_User__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trailhead_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field stores the Trailhead Id available on the user’s Trailhead profile page. This is the only data required for the user to sign up for the application.</description>
        <label>Trailhead Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>This object stores the details of the team members who uses the application. Whenever a user signs up to the system via the public page, this object stores that record.</description>
    <label>Trailhead User</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailhead Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rank__c</columns>
        <columns>Total_Badges__c</columns>
        <columns>Total_Points__c</columns>
        <columns>Total_Superbadges__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>